big finish is now little finish

--- a/index.html
+++ b/index.html
@@ -115,10 +115,13 @@ var slides = [
   // "slides/moritz.html",
   // "slides/force_labels/index.html",
   // "slides/force_label_code.html",
+  "slides/other_inspiration_title.html",
   "slides/obama_pres.html",
   "electro/index.html",
   "slides/disqus.html",
   "slides/shape_library.html",
+  "slides/visual_sed.html",
+  "slides/yoda.html",
 
   "slides/vaderpic_two.html",
   "slides/end.html",
