--- a/slides/sources.html
+++ b/slides/sources.html
@@ -27,9 +27,9 @@
       <li>My Bubble Cloud tutorial: http://vallandingham.me/building_a_bubble_cloud.html</li>
       <li>NYT Bubble Cloud: http://www.nytimes.com/interactive/2012/09/06/us/politics/convention-word-counts.html</li>
       <li>Collision Detection Example: http://bl.ocks.org/mbostock/3231298</li>
-      <li>Quadtree Selection: http://bl.ocks.org/mbostock/4343214</li>
-      <li>Bloomberg Billionaires: http://www.bloomberg.com/billionaires/2013-04-26/aaa</li>
-      <li>Force Directed States: http://mbostock.github.io/d3/talk/20111018/force-states.html</li>
+      <!-- <li>Quadtree Selection: http://bl.ocks.org/mbostock/4343214</li> -->
+      <!-- <li>Bloomberg Billionaires: http://www.bloomberg.com/billionaires/2013-04-26/aaa</li> -->
+      <!-- <li>Force Directed States: http://mbostock.github.io/d3/talk/20111018/force-states.html</li> -->
       <li>Visualizing the Racial Divide: http://vallandingham.me/racial_divide/</li>
       <li>Senate Vote visualization: http://news.yahoo.com/senate-social-network-diagram-mcconnell-mean-girls-000513361.html</li>
       <li>Interactive Network Tutorial: http://flowingdata.com/2012/08/02/how-to-make-an-interactive-network-visualization/</li>
@@ -38,8 +38,10 @@
       <li>Clustered Force Layout: http://bl.ocks.org/mbostock/1747543</li>
       <li>Lets Free Congress: http://letsfreecongress.org/</li>
       <li>Grid Experiments: https://github.com/MoritzStefaner/gridexperiments</li>
-      <li>Force Based Labels: http://bl.ocks.org/MoritzStefaner/1377729</li>
-      <li>Max Planck Research Networks: http://max-planck-research-networks.net/</li>
+      <li>Shape of My Library: http://shapeofmylibrary.com/</li>
+      <li>Visual Sedimentation: http://www.visualsedimentation.org/</li>
+      <!-- <li>Force Based Labels: http://bl.ocks.org/MoritzStefaner/1377729</li> -->
+      <!-- <li>Max Planck Research Networks: http://max-planck-research-networks.net/</li> -->
     </u>
   </body>
 </html>
