--- a/slides/visual_sed.html
+++ b/slides/visual_sed.html
@@ -7,9 +7,8 @@
     <script type="text/javascript" src="../js/slide.js"></script>
     <style type="text/css">
       body {
-        background-color:white;
-        margin-top: 50px;
-        background-image: url('../img/disqus_gravity_1024.png');
+        background-color: white;
+        background-image: url('../img/vs_heap_chart.png');
         background-repeat: no-repeat;
         /* background-size: 100% 100%; */
         /* background-size: 1280px 800px; */
@@ -17,6 +16,6 @@
     </style>
   </head>
   <body>
-    <h2 style="color:white;">Disqus Gravity</h2>
+    <h2>Visual Sedimentation</h2>
   </body>
 </html>
