--- a/slides/yoda.html
+++ b/slides/yoda.html
@@ -7,16 +7,15 @@
     <script type="text/javascript" src="../js/slide.js"></script>
     <style type="text/css">
       body {
-        background-color:white;
-        margin-top: 50px;
-        background-image: url('../img/disqus_gravity_1024.png');
+        background-color: #f6f2ec;
+        background-image: url('../img/yoda.png');
         background-repeat: no-repeat;
-        /* background-size: 100% 100%; */
+        background-size: 100% 100%;
         /* background-size: 1280px 800px; */
       }
     </style>
   </head>
   <body>
-    <h2 style="color:white;">Disqus Gravity</h2>
+    <h2>Abuse The Force</h2>
   </body>
 </html>
