fix up new slides

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ var slides = [
   "slides/expand_bubble_code.html",
   "slides/expand_bubble.html",
   "gridexperiments/index.html",
-  "slides/grid_code.html",
+  /* "slides/grid_code.html", */
+  "slides/grid_transit.html",
   // "slides/moritz.html",
   // "slides/force_labels/index.html",
   // "slides/force_label_code.html",
