--- a/slides/disqus.html
+++ b/slides/disqus.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
     <style type="text/css">
       body {
-        background-color:white;
+        background-color:#5d707d;
         margin-top: 50px;
         background-image: url('../img/disqus_gravity_1024.png');
         background-repeat: no-repeat;
@@ -17,6 +17,6 @@
     </style>
   </head>
   <body>
-    <h2 style="color:white;">Disqus Gravity</h2>
+    <h2 style="color:white;">disqus.com/gravity</h2>
   </body>
 </html>
