--- a/slides/grid_transit.html
+++ b/slides/grid_transit.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="../js/slide.js"></script>
     <style type="text/css">
       body {
-        background-color: white;
-        background-image: url('../img/shape_library.png');
+        background-color: #f6f2ec;
+        background-image: url('../img/grid_transit.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
         /* background-size: 1280px 800px; */
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <h2></h2>
+    <h2>fathom.info</h2>
   </body>
 </html>
