adding more script highlighting

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ var slides = [
   "slides/force_code_with_tick_function.html",
   "slides/force_code_with_tick_function_centers.html",
   "slides/simple_bubbles_custom_force_no_alpha.html",
-  "slides/simulated_annealing_title.html",
-  "slides/simulated_annealing.html",
-  "slides/starlava.html",
+  // "slides/simulated_annealing_title.html",
+  // "slides/simulated_annealing.html",
+  // "slides/starlava.html",
   "slides/alpha_blending_quote.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
@@ -65,6 +65,7 @@ var slides = [
   "slides/simple_bubbles_collide_brute.html",
   "slides/collision.html",
   // "slides/alpha_collision_quote.html",
+  "slides/collision_alpha_title.html",
   "slides/collide_code_with_alpha.html",
   "bubble_cloud/index.html",
   // "slides/quadtree_title.html",
