--- a/slides/collide_code.html
+++ b/slides/collide_code.html
@@ -20,7 +20,7 @@
 
         } else if(cur_step == 'more') {
           $('code').unhighlight('distance =', {caseSensitive: true});
-          $('code').highlight('newDistance', {caseSensitive: true});
+          $('code').highlight('distance < minDistance', {caseSensitive: true});
         }
       };
     </script>
