--- a/slides/force_with_edges_code.html
+++ b/slides/force_with_edges_code.html
@@ -26,11 +26,9 @@
     <h2>Force With Edges</h2>
     <pre>
       <code class="javascript">
-  link = vis.selectAll("line.link")
+  link = vis.selectAll("line")
     .data(links)
     .enter().append("line")
-    .attr("class", "link")
-
       </code>
     </pre>
   </body>
