--- a/slides/macwright_math.html
+++ b/slides/macwright_math.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <h2>http://macwright.org/2013/03/05/math-for-pictures.html</h2>
+    <h2 style="font-size:110%;">macwright.org/2013/03/05/math-for-pictures.html</h2>
   </body>
 </html>
