--- a/slides/force_with_edges_code_link_distance.html
+++ b/slides/force_with_edges_code_link_distance.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
     <script type="text/javascript">
-      var substeps = ['highlight','more'];
+      var substeps = ['more'];
 
       function step(cur_step) {
         if(cur_step == 'highlight') {
