--- a/slides/remove_links_code.html
+++ b/slides/remove_links_code.html
@@ -5,10 +5,25 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
+    <script type="text/javascript">
+      var substeps = ['highlight', 'more'];
+
+      function step(cur_step) {
+        if(cur_step == 'highlight') {
+          $('code').highlight('filterLinks')
+        }  else if(cur_step == 'more') {
+          $('code').unhighlight('filterLinks')
+          $('code').highlight('force.links')
+          $('code').highlight('.data')
+        }
+      };
+    </script>
   </head>
   <body>
     <h2>Filter Links</h2>
@@ -17,14 +32,13 @@
 // called when slider changes
 filteredLinks = filterLinks(allLinks);
 
-force.links(filterLinks);
+force.links(filteredLinks);
 
-link = network.selectAll(".link")
+link = network.selectAll("line")
   .data(force.links());
 
 link.enter()
   .insert("line", ".node")
-  .attr("class", "link");
 
 link.exit().remove();
 
