--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@ var slides = [
   "gridexperiments/index.html",
   /* "slides/grid_code.html", */
   "slides/grid_transit.html",
+  "blank_grid/index.html",
+  "subway_grid/index.html",
   // "slides/moritz.html",
   // "slides/force_labels/index.html",
   // "slides/force_label_code.html",
