--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 var slides = [
   "slides/title.html",
   "slides/force_face.html",
+  "slides/work.html",
+  "slides/simple_force.html",
   "remix/index.html",
   "slides/amanda_js_quote.html",
   "slides/simple_force_no_links.html",
