remove amanda cox quote

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ var slides = [
   "slides/work.html",
   "slides/simple_force.html",
   "remix/index.html",
-  "slides/amanda_js_quote.html",
+  // "slides/amanda_js_quote.html",
   "slides/simple_force_no_links.html",
   "slides/nodes_array_code.html",
   "slides/force_code_one.html",
