after first attempt at talking

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ var slides = [
   "slides/force_face.html",
   "slides/work.html",
   "slides/simple_force.html",
+  "slides/what_is_force.html",
   "remix/index.html",
   // "slides/amanda_js_quote.html",
   "slides/simple_force_no_links.html",
@@ -23,7 +24,7 @@ var slides = [
   "slides/force_code_one.html",
   "slides/layouts_quote.html",
   "slides/force_code_add_node.html",
-  "slides/node_data.html",
+  "slides/node_data_highlight.html",
   "slides/force_code_two.html",
   "slides/start_force.html",
   "slides/node_charge_code.html",
@@ -35,7 +36,7 @@ var slides = [
   "slides/simple_bubbles_overlap.html",
   "slides/bubble_chart_code_charge_function.html",
   "slides/simple_bubbles_with_charge.html",
-  "gates/index.html",
+  // "gates/index.html",
   "slides/bubble_chart_intro.html",
   "slides/starbabies.html",
   "slides/custom_force_title.html",
@@ -54,21 +55,22 @@ var slides = [
   "slides/alpha_out.html",
   "slides/force_code_with_tick_function_centers_alpha.html",
   "slides/simple_bubbles_custom_force_alpha.html",
-  "gates/index.html",
+  // "gates/index.html",
   "slides/nyt_bubble_chart.html",
   "slides/multiple_forces_code.html",
   "slides/cool_force_layout_quote.html",
-  "slides/starcats.html",
+  // "slides/starcats.html",
   "slides/collision_title.html",
+  "slides/simple_bubbles_with_charge.html",
   "slides/nyt_bubble_cloud.html",
   "bubble_cloud/index.html",
   "slides/collide_pseudo_code.html",
-  "slides/collide_code.html",
+  // "slides/collide_code.html",
   "slides/simple_bubbles_collide_brute.html",
   "slides/collision.html",
   // "slides/alpha_collision_quote.html",
-  "slides/collision_alpha_title.html",
-  "slides/collide_code_with_alpha.html",
+  // "slides/collision_alpha_title.html",
+  // "slides/collide_code_with_alpha.html",
   "bubble_cloud/index.html",
   // "slides/quadtree_title.html",
   // "slides/quadtree_fun.html",
@@ -77,7 +79,7 @@ var slides = [
   // "slides/quadtree_pseudo_code.html",
   // "slides/quadtree_code.html",
   // "bubble_cloud/index.html",
-  "slides/word_cloud_quote.html",
+  // "slides/word_cloud_quote.html",
   "slides/shock_crowd.html",
   // "slides/custom_nodes_title.html",
   // "slides/layouts_quote.html",
@@ -96,15 +98,15 @@ var slides = [
   "slides/force_with_edges_code_link_distance.html",
   "slides/racial_divide/index.html",
   "slides/remove_edges_title.html",
-  "vote_studies/index.html",
-  "slides/remove_links_code.html",
+  // "vote_studies/index.html",
+  // "slides/remove_links_code.html",
   "slides/newspic.html",
   "slides/custom_layouts_title.html",
   "slides/lazy_position_quote.html",
   "interactive_network_demo/index.html",
   "slides/sin_cos_pic.html",
-  "slides/custom_circle_layout_code.html",
-  "slides/custom_circle_layout_code_two.html",
+  // "slides/custom_circle_layout_code.html",
+  // "slides/custom_circle_layout_code_two.html",
   "collaborations/index.html",
   "slides/macwright_math.html",
   // "slides/cluster_force/index.html",
@@ -116,18 +118,18 @@ var slides = [
   "slides/expand_bubble.html",
   "gridexperiments/index.html",
   /* "slides/grid_code.html", */
-  "slides/grid_transit.html",
   "blank_grid/index.html",
+  "slides/grid_transit.html",
   "subway_grid/index.html",
   // "slides/moritz.html",
   // "slides/force_labels/index.html",
   // "slides/force_label_code.html",
   "slides/other_inspiration_title.html",
   "slides/obama_pres.html",
-  "electro/index.html",
-  "slides/disqus.html",
+  // "electro/index.html",
   "slides/shape_library.html",
-  "worldometers/index.html",
+  "slides/disqus.html",
+  // "worldometers/index.html",
   "slides/yoda.html",
 
   "slides/vaderpic_two.html",
