--- a/slides/alpha_blending_quote.html
+++ b/slides/alpha_blending_quote.html
@@ -21,7 +21,7 @@
   <body>
     <br/>
     <br/>
-    <h1 style="font-size:110%"><strong>Alpha == Cooling Parameter</strong></h1>
+    <h1 style="font-size:110%"><strong>Alpha</strong></h1>
     <br/>
     <br/>
     <p>Alpha is a blending parameter, used to combine multiple forces acting on nodes.</p>
