--- a/slides/force_with_edges_code_three.html
+++ b/slides/force_with_edges_code_three.html
@@ -15,8 +15,7 @@
     <pre>
       <code class="javascript">
 force
-  .linkDistance(80)
-  .linkStrength(1);
+  .linkDistance(80);
       </code>
     </pre>
   </body>
