--- a/slides/node_data_highlight.html
+++ b/slides/node_data_highlight.html
@@ -8,32 +8,35 @@
     <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    
-    <script type="text/javascript" src="../js/d3.v3.js"></script>
-    <script type="text/javascript" src="../js/slide.js"></script>
     <script type="text/javascript">
       var substeps = ['highlight'];
 
       function step(cur_step) {
         if(cur_step == 'highlight') {
-          $('code').highlight('line')
-        }  else if(cur_step == 'more') {
-        }
+          $('code').highlight('.x')
+          $('code').highlight('.y')
+        } 
       };
     </script>
+    
+    <script type="text/javascript" src="../js/d3.v3.js"></script>
+    <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Force With Edges</h2>
+    <h2>Data In Each Node</h2>
     <pre>
       <code class="javascript">
-  link = vis.selectAll("line")
-    .data(force.links())
-    .enter().append("line")
+// each node has:
+{
+  x: 680.27,    // current location
+  y: 401.73,
+  px: 681.25,   // previous location
+  py: 400.73,   
+  amount: 30      // your data
+  // ...
+}
+
       </code>
     </pre>
   </body>
-    <!--.attr("x1", function(d) { return d.source.x; })-->
-    <!--.attr("y1", function(d) { return d.source.y; })-->
-    <!--.attr("x2", function(d) { return d.target.x; })-->
-    <!--.attr("y2", function(d) { return d.target.y; });-->
 </html>
