--- a/slides/nyt_bubble_chart.html
+++ b/slides/nyt_bubble_chart.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
     <style type="text/css">
       body {
-        background-color: #f6f2ec;
+        background-color: white;
         background-image: url('../img/nyt_bubbles_1024x768.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
