--- a/slides/grid_experiments_title.html
+++ b/slides/grid_experiments_title.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h1>Expanding Bubbles</h1>
-    <h2>Tony Chu</h2>
+    <h1>Grid Experiments</h1>
+    <h2>Moritz Stefaner</h2>
   </body>
 </html>
