--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ var slides = [
   "slides/newspic.html",
   "slides/custom_layouts_title.html",
   "slides/lazy_position_quote.html",
+  "slides/radial_title.html",
   "interactive_network_demo/index.html",
   "slides/sin_cos_pic.html",
   "slides/macwright_math.html",
@@ -116,6 +117,7 @@ var slides = [
   "slides/free_congress_two.html",
   "slides/expand_bubble_code.html",
   "slides/expand_bubble.html",
+  "slides/grid_experiments_title.html",
   "gridexperiments/index.html",
   /* "slides/grid_code.html", */
   "blank_grid/index.html",
