--- a/slides/sources.html
+++ b/slides/sources.html
@@ -20,7 +20,7 @@
     <ul style="font-size: 54%;">
       <li>Example Force Directed Network: http://bl.ocks.org/mbostock/4062045</li>
       <li>Everything is a Remix: http://www.everythingisaremix.info/</li>
-      <li>Amanda Cox Interview: http://blogs.hbr.org/hbr/hbreditors/2013/03/power_of_visualizations_aha_moment.html</li>
+      <!-- <li>Amanda Cox Interview: http://blogs.hbr.org/hbr/hbreditors/2013/03/power_of_visualizations_aha_moment.html</li> -->
       <li>Bubble Chart tutorial: http://vallandingham.me/bubble_charts_in_d3.html</li>
       <li>NYT Budget Bubble Chart: http://www.nytimes.com/interactive/2012/02/13/us/politics/2013-budget-proposal-graphic.html?_r=0</li>
       <li>Mike Bostock's force talk: http://vimeo.com/29458354</li>
@@ -31,7 +31,7 @@
       <!-- <li>Bloomberg Billionaires: http://www.bloomberg.com/billionaires/2013-04-26/aaa</li> -->
       <!-- <li>Force Directed States: http://mbostock.github.io/d3/talk/20111018/force-states.html</li> -->
       <li>Visualizing the Racial Divide: http://vallandingham.me/racial_divide/</li>
-      <li>Senate Vote visualization: http://news.yahoo.com/senate-social-network-diagram-mcconnell-mean-girls-000513361.html</li>
+      <!-- <li>Senate Vote visualization: http://news.yahoo.com/senate-social-network-diagram-mcconnell-mean-girls-000513361.html</li> -->
       <li>Interactive Network Tutorial: http://flowingdata.com/2012/08/02/how-to-make-an-interactive-network-visualization/</li>
       <li>Stowers Collaboration Network: http://www.stowers.org/stowersreport/maps</li>
       <li>Math For Pictures: http://macwright.org/2013/03/05/math-for-pictures.html</li>
@@ -41,7 +41,7 @@
       <li>Fathom Grid MBTA: http://fathom.info/latest/4756</li>
       <li>Is Barack Obama President: http://www.isbarackobamathepresident.com/</li>
       <li>Shape of My Library: http://shapeofmylibrary.com/</li>
-      <li>Visual Sedimentation: http://www.visualsedimentation.org/</li>
+      <!-- <li>Visual Sedimentation: http://www.visualsedimentation.org/</li> -->
       <!-- <li>Force Based Labels: http://bl.ocks.org/MoritzStefaner/1377729</li> -->
       <!-- <li>Max Planck Research Networks: http://max-planck-research-networks.net/</li> -->
     </u>
