--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ var slides = [
   "slides/force_face.html",
   "slides/work.html",
   "slides/simple_force.html",
+  "slides/what_is_d.html",
   "slides/what_is_force.html",
   "remix/index.html",
   // "slides/amanda_js_quote.html",
@@ -58,7 +59,7 @@ var slides = [
   // "gates/index.html",
   "slides/nyt_bubble_chart.html",
   "slides/multiple_forces_code.html",
-  "slides/cool_force_layout_quote.html",
+  // "slides/cool_force_layout_quote.html",
   // "slides/starcats.html",
   "slides/collision_title.html",
   "slides/simple_bubbles_with_charge.html",
@@ -97,7 +98,7 @@ var slides = [
   "slides/simple_bubbles_with_edges.html",
   "slides/force_with_edges_code_link_distance.html",
   "slides/racial_divide/index.html",
-  "slides/remove_edges_title.html",
+  // "slides/remove_edges_title.html",
   // "vote_studies/index.html",
   // "slides/remove_links_code.html",
   "slides/newspic.html",
@@ -106,10 +107,10 @@ var slides = [
   "slides/radial_title.html",
   "interactive_network_demo/index.html",
   "slides/sin_cos_pic.html",
-  "slides/macwright_math.html",
   // "slides/custom_circle_layout_code.html",
   // "slides/custom_circle_layout_code_two.html",
   "collaborations/index.html",
+  "slides/macwright_math.html",
   // "slides/cluster_force/index.html",
   // "slides/cluster_force_code.html",
   "slides/expanding_bubble_title.html",
