--- a/interactive_network_demo/index.html
+++ b/interactive_network_demo/index.html
@@ -20,7 +20,7 @@
   <!-- end CSS-->
 
   <script type="text/javascript">
-    var substeps = ['start'];
+    var substeps = ['start', 'radial'];
     </script>
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
