--- a/slides/what_is_d.html
+++ b/slides/what_is_d.html
@@ -16,19 +16,24 @@
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
     <script type="text/javascript">
-      var substeps = ['one', 'two', 'three', 'four'];
+      var substeps = ['one', 'two', 'three', 'four', 'code_one'];
 
       function step(cur_step) {
         d3.select("#" + cur_step).style("display", "inherit")
+
+          if(cur_step == 'code_one') {
+            d3.selectAll("p").style("background-color", "orange")
+          }
+
       };
     </script>
   </head>
   <body>
-    <h1>What is the Force Layout?</h1>
+    <h1>What is the D3.js?</h1>
     <br/><br/>
-    <p id="one" style="display:none;">Aesthetically pleasing network drawing algorithm</p>
-    <p id="two" style="display:none;">Creates a physical simulation</p>
-    <p id="three" style="display:none;">Forces move nodes each iteration</p>
-    <p id="four" style="display:none;">Settles into a stable configuration</p>
+    <p id="one" style="display:none;">Data-Driven Documents</p>
+    <p id="two" style="display:none;">Bind data to DOM</p>
+    <p id="three" style="display:none;">Manipulate sets of elements - <i>Selections</i></p>
+    <code id="four" style="display:none;font-size: 70%;">d3.selectAll("p").style("background-color", "orange");</code>
   </body>
 </html>
