--- a/slides/node_data_highlight.html
+++ b/slides/node_data_highlight.html
@@ -13,8 +13,8 @@
 
       function step(cur_step) {
         if(cur_step == 'highlight') {
-          $('code').highlight('.x')
-          $('code').highlight('.y')
+          $('code').highlight('x:')
+          $('code').highlight('y:')
         } 
       };
     </script>
