--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ var slides = [
   "slides/bubble_chart_code_charge_function.html",
   "slides/simple_bubbles_with_charge.html",
   // "gates/index.html",
-  "slides/bubble_chart_intro.html",
   "slides/starbabies.html",
+  "slides/nyt_bubble_chart_open.html",
   "slides/custom_force_title.html",
   "slides/implicit_position_quote.html",
   "gates/index.html",
-  "slides/node_data.html",
+  // "slides/node_data.html",
   "slides/force_code_two_no_steps.html",
   "slides/force_code_with_tick_function.html",
   "slides/force_code_with_tick_function_centers.html",
@@ -61,8 +61,9 @@ var slides = [
   "slides/multiple_forces_code.html",
   // "slides/cool_force_layout_quote.html",
   // "slides/starcats.html",
-  "slides/collision_title.html",
+  "slides/bubble_chart_intro.html",
   "slides/simple_bubbles_with_charge.html",
+  "slides/collision_title.html",
   "slides/nyt_bubble_cloud.html",
   "bubble_cloud/index.html",
   "slides/collide_pseudo_code.html",
@@ -82,6 +83,7 @@ var slides = [
   // "bubble_cloud/index.html",
   // "slides/word_cloud_quote.html",
   "slides/shock_crowd.html",
+  "slides/nodes_and_edges_title.html",
   // "slides/custom_nodes_title.html",
   // "slides/layouts_quote.html",
   // "slides/force_code_add_node.html",
@@ -89,7 +91,6 @@ var slides = [
   // "slides/simple_bubbles_faces.html",
   // "slides/force_states_code.html",
   // "slides/force_states/index.html",
-  "slides/nodes_and_edges_title.html",
   "slides/simple_force.html",
   "slides/link_data.html",
   "slides/force_with_edges_code.html",
@@ -105,8 +106,8 @@ var slides = [
   "slides/custom_layouts_title.html",
   "slides/lazy_position_quote.html",
   "slides/radial_title.html",
-  "interactive_network_demo/index.html",
-  "slides/sin_cos_pic.html",
+  // "interactive_network_demo/index.html",
+  // "slides/sin_cos_pic.html",
   // "slides/custom_circle_layout_code.html",
   // "slides/custom_circle_layout_code_two.html",
   "collaborations/index.html",
@@ -116,8 +117,8 @@ var slides = [
   "slides/expanding_bubble_title.html",
   "slides/free_congress.html",
   "slides/free_congress_two.html",
-  "slides/expand_bubble_code.html",
   "slides/expand_bubble.html",
+  "slides/expand_bubble_code.html",
   "slides/grid_experiments_title.html",
   "gridexperiments/index.html",
   /* "slides/grid_code.html", */
