after second round

--- a/collaborations/index.html
+++ b/collaborations/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <script type="text/javascript">
-    var substeps = ['start'];
+    var substeps = ['start', 'lab', 'spiral'];
   </script>
 
   <!-- CSS: implied media=all -->
@@ -26,22 +26,22 @@
 
 <body>
   <div id="container">
-    <header>
-    <h1>Stowers Group Collaboration</h1>
-    </header>
-    <div id="search_section" class="control">
-      <form id="search_form" action="" class="styled" method="post">
-        <p class="search_title">Search <input type="text" class="text-input" id="search" value="" /></p>
-      </form>
-    </div>
-    <div id="right_section" class="control">
-      <a id="about">About</a>
-      <a id="key_button">Key</a>
-      <div id="key_container" style="display: none;">
-        <div id="key">
-        </div>
-      </div>
-    </div>
+    <!-- <header> -->
+    <!-- <h1>Stowers Group Collaboration</h1> -->
+    <!-- </header> -->
+    <!-- <div id="search_section" class="control"> -->
+    <!--   <form id="search_form" action="" class="styled" method="post"> -->
+    <!--     <p class="search_title">Search <input type="text" class="text-input" id="search" value="" /></p> -->
+    <!--   </form> -->
+    <!-- </div> -->
+    <!-- <div id="right_section" class="control"> -->
+    <!--   <a id="about">About</a> -->
+    <!--   <a id="key_button">Key</a> -->
+    <!--   <div id="key_container" style="display: none;"> -->
+    <!--     <div id="key"> -->
+    <!--     </div> -->
+    <!--   </div> -->
+    <!-- </div> -->
     <div id="modifiers">
     <div id="filters" class="control">
       <h3 class="title">Sort</h3>
