--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ var slides = [
   "slides/work.html",
   "slides/simple_force.html",
   "slides/what_is_d.html",
+  "slides/what_is_d_two.html",
   "slides/what_is_force.html",
   "remix/index.html",
   // "slides/amanda_js_quote.html",
@@ -37,11 +38,11 @@ var slides = [
   "slides/simple_bubbles_overlap.html",
   "slides/bubble_chart_code_charge_function.html",
   "slides/simple_bubbles_with_charge.html",
+  "slides/implicit_position_quote.html",
   // "gates/index.html",
   "slides/starbabies.html",
   "slides/nyt_bubble_chart_open.html",
   "slides/custom_force_title.html",
-  "slides/implicit_position_quote.html",
   "gates/index.html",
   // "slides/node_data.html",
   "slides/force_code_two_no_steps.html",
@@ -57,8 +58,8 @@ var slides = [
   "slides/force_code_with_tick_function_centers_alpha.html",
   "slides/simple_bubbles_custom_force_alpha.html",
   // "gates/index.html",
-  "slides/nyt_bubble_chart.html",
-  "slides/multiple_forces_code.html",
+  // "slides/nyt_bubble_chart.html",
+  // "slides/multiple_forces_code.html",
   // "slides/cool_force_layout_quote.html",
   // "slides/starcats.html",
   "slides/bubble_chart_intro.html",
