--- a/slides/collide_pseudo_code.html
+++ b/slides/collide_pseudo_code.html
@@ -23,6 +23,7 @@
           $('code').unhighlight('each')
           $('code').unhighlight('\'node2\'')
           $('code').highlight('too close')
+          $('code').highlight('distance')
         } else if(cur_step == 'move') {
           $('code').highlight('move')
         }
