--- a/slides/implicit_position_quote.html
+++ b/slides/implicit_position_quote.html
@@ -12,8 +12,9 @@
 
       function step(cur_step) {
         if(cur_step == 'change') {
-          $('blockquote').html('The force layout is a lazy way to do position encoding.');
+          $('blockquote').html('The force layout is a lazy way to move nodes.');
           $('blockquote').highlight('lazy');
+          $('blockquote').highlight('move nodes');
           $('.author').html('- Jim Vallandingham');
 
 
