--- a/slides/lazy_position_quote.html
+++ b/slides/lazy_position_quote.html
@@ -25,7 +25,7 @@
     </script>
   </head>
   <body>
-    <blockquote>The force layout is an <span style="background-color:#FFFF88;">lazy</span> way to do position encoding.</blockquote>
+    <blockquote>The force layout is an <span style="background-color:#FFFF88;">lazy</span> way to move nodes.</blockquote>
     <!-- <div class="author">- Mike Bostock</div> -->
   </body>
 </html>
