--- a/slides/what_is_force.html
+++ b/slides/what_is_force.html
@@ -24,7 +24,7 @@
     </script>
   </head>
   <body>
-    <h1>What is the Force Layout?</h1>
+    <h1>What is a Force Layout?</h1>
     <br/><br/>
     <p id="one" style="display:none;">Aesthetically pleasing network drawing algorithm</p>
     <p id="two" style="display:none;">Creates a physical simulation</p>
