remove work slide. add interaction

--- a/gates/index.html
+++ b/gates/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- end CSS-->
     <script type="text/javascript">
-      var substeps = ['start'];
+      var substeps = ['start', 'move', 'remove'];
     </script>
 
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
