--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 var slides = [
   "slides/title.html",
   "slides/force_face.html",
-  "slides/work.html",
+  // "slides/work.html",
   "slides/simple_force.html",
   "slides/what_is_d.html",
   "slides/what_is_d_two.html",
