remove unused controls

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ var slides = [
   "slides/link_data.html",
   "slides/force_with_edges_code.html",
   "slides/force_with_edges_code_two.html",
+  "slides/simple_bubbles_with_edges.html",
   "slides/force_with_edges_code_three.html",
   "slides/simple_bubbles_with_edges.html",
   "slides/force_with_edges_code_link_distance.html",
