after nth time doing this stupid thing

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ var slides = [
   // "vote_studies/index.html",
   // "slides/remove_links_code.html",
   "slides/newspic.html",
-  "slides/custom_layouts_title.html",
-  "slides/lazy_position_quote.html",
+  // "slides/custom_layouts_title.html",
+  // "slides/lazy_position_quote.html",
   "slides/radial_title.html",
   // "interactive_network_demo/index.html",
   // "slides/sin_cos_pic.html",
