--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ var slides = [
   // "slides/multiple_forces_code.html",
   // "slides/cool_force_layout_quote.html",
   // "slides/starcats.html",
-  "slides/bubble_chart_intro.html",
+  // "slides/bubble_chart_intro.html",
   "slides/simple_bubbles_with_charge.html",
   "slides/collision_title.html",
   "slides/nyt_bubble_cloud.html",
