--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ var slides = [
   "slides/force_face.html",
   // "slides/work.html",
   "slides/simple_force.html",
-  "slides/what_is_d.html",
-  "slides/what_is_d_two.html",
+  // "slides/what_is_d.html",
+  // "slides/what_is_d_two.html",
   "slides/what_is_force.html",
   "remix/index.html",
   // "slides/amanda_js_quote.html",
